# ml

./: README.md
bayesian_networks/: Makefile  config.h  config.h.in  config.status  configure  configure.ac  note.html  note.org
bayesian_networks/autom4te.cache/: output.0  traces.0  traces.1
bayesian_networks/src/: Makefile  Makefile.am  Makefile.in  bayesian_networks.c  bayesian_networks.h  common.h  main.c  utils.c  utils.h
bayesian_networks/src/.deps/: bayesian_networks.Po  main.Po  utils.Po
collaborative_filtering_kmeans/: Makefile  README.txt
collaborative_filtering_kmeans/q1/: Makefile  a.py  config.h  config.h.in  config.status  configure  configure.ac
collaborative_filtering_kmeans/q1/autom4te.cache/: output.1  traces.0  traces.1
collaborative_filtering_kmeans/q1/src/: Makefile  Makefile.am  Makefile.in  common.h  main.c  netflix.c  netflix.h  utils.c  utils.h
collaborative_filtering_kmeans/q1/src/.deps/: main.Po  netflix.Po  utils.Po
collaborative_filtering_kmeans/q3/: KMeans.java  Makefile
decision_tree/: Makefile  Makefile.in  README  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac
decision_tree/autom4te.cache/: output.1  requests  traces.0  traces.1
decision_tree/include/: libarray.h
decision_tree/src/: array.c  array.h  cscope.out  decision_tree.c  decision_tree.h  decisiontree.py  main.c  makefile  makefile.am  makefile.in  system.h
decision_tree/src/.deps/: array.Po  decision_tree.Po  main.Po  test.Po
nb_lr_pt/: Makefile  Makefile.in  README  config.h  config.h.in  configure  configure.ac
nb_lr_pt/autom4te.cache/: output.1  traces.0  traces.1
nb_lr_pt/src/: Makefile  Makefile.am  Makefile.in  common.h  load_file.c  load_file.h  logistic_regression.c  logistic_regression.h  main  main.c  naive_bayes.c  naive_bayes.h  perceptrons.c  perceptrons.h  utils.c  utils.h
